Just replaced (and a little fix) transfer api with MC1.21's code